settings: Protect sensitive info on About device
Tired of seeing people/see yourself editing every screenshot to hide some personal info like their phone numbers or their IMEI? Well, this commit will help by adding a custom string to inform the user that, to get that info, they should tap that preference. If you want to show them, you can make an overlay and set configShowDeviceSensitiveInfo as true.

[shagbag913: nuke config flag check]

Change-Id: I1a45e05ce75ccd42873bb7e92590e8b241700ca3
Signed-off-by: Udit Karode <udit.karode@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11432,4 +11432,7 @@
     <!-- Subtext for showing the option of RTT setting. [CHAR LIMIT=NONE] -->
     <string name="rtt_settings_always_visible"></string>
 
+     <!-- String for removal of sensitive info on about, depending on tap -->
+     <string name="device_info_protected_single_press">Tap to show info</string>
+
 </resources>
