--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -4840,4 +4840,7 @@
     <string name="rtt_settings_no_visible" msgid="7440356831140948382"></string>
     <string name="rtt_settings_visible_during_call" msgid="7866181103286073700"></string>
     <string name="rtt_settings_always_visible" msgid="2364173070088756238"></string>
+
+    <string name="device_info_protected_single_press">Stuknij, aby wyświetlić</string>
+
 </resources>
